--- a/Koala-Storyboard/Base.lproj/Main.storyboard
+++ b/Koala-Storyboard/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KWq-bw-7dk" userLabel="EditProfileButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentMode="left" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KWq-bw-7dk" userLabel="EditProfileButton">
                                 <rect key="frame" x="47" y="599" width="100" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="y4U-dR-yPl"/>
